--- a/P4.md
+++ b/P4.md
@@ -1,1 +1,20 @@
-# Proyecto4
+---
+
+## Universidad de Costa Rica
+### Escuela de Ingeniería Eléctrica
+#### IE0405 - Modelos Probabilísticos de Señales y Sistemas
+
+Segundo semestre del 2020
+
+---
+
+* Estudiante: **Judit González Gámez**
+* Carné: **B63031**
+* Grupo: **2**
+---
+
+---
+# `Proyecto 4` - *Modulación digital IQ*
+
+> La asignación para el proyecto 4 consiste en realizar una simulación del sistema de comunicaciones con una modulación QPSK. Para realizarlo se toma como base la simulación con una modulación BPSK, dada como ejemplo para este proyecto. 
+--- 
